--- a/views/schedule_list.ejs
+++ b/views/schedule_list.ejs
@@ -71,6 +71,12 @@
                                 <span class="font-lato"><%= scheduleList[i].recommend%></span>
                             </a>
                         </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-user"></i>
+                                <span class="font-lato"><%= scheduleList[i].author%></span>
+                            </a>
+                        </li>
                     </ul>
 
                     <p><%= scheduleList[i].description%></p>
