--- a/views/login.ejs
+++ b/views/login.ejs
@@ -139,7 +139,7 @@
 						</div>
 						<% } %>
 						<% if(registerSuc == true){%>
-						<div class="alert alert-mini alert-danger margin-bottom-30 col-md-6 col-sm-6 col-md-offset-3 col-sm-offset-3">
+						<div class="alert alert-mini alert-success margin-bottom-30 col-md-6 col-sm-6 col-md-offset-3 col-sm-offset-3">
 							<strong>Oh!</strong> Register Success!
 						</div>
 						<% } %>
