--- a/public/assets/plugins/styleswitcher/styleswitcher.css
+++ b/public/assets/plugins/styleswitcher/styleswitcher.css
@@ -5,6 +5,7 @@
 	top: 30px;
 	z-index: 1001;
 	width:500px;
+	height: 100%;
 	margin-left: 0;
 	border-radius: 0;
 	font-family: 'Open Sans', Arial, sans-serif;
@@ -92,7 +93,7 @@
 
 #switcher .content-switcher {
 	padding: 16px;
-	overflow: hidden;
+	height: calc(100% - 32px);
 }
 #switcher .content-switcher label {
 	max-width:100px;
