--- a/public/stylesheets/chat.css
+++ b/public/stylesheets/chat.css
@@ -7,7 +7,7 @@
     border-radius: 4px;
     position: relative;
     float: left;
-    background: #f0f0f0;
+    background: #1df05d;
 }
 
 .messageSend{
@@ -19,21 +19,19 @@
     border-radius: 4px;
     position: relative;
     float: right;
-    background: #f0f0f0;
+    background: #f0ef11;
 }
 
 .messageList{
-    display: inline-block;
-    width: 90%;
-    height: 700px;
+    width: 100%;
     overflow: auto;
+    z-index: 1001;
+    height: 70%;
 }
 
-#switcher{
-    height: 90%;
-}
 
-/*.inputBox{*/
-    /*display: inline-block;*/
-    /*position: relative;*/
-/*}*/
+.inputBox{
+    z-index: 1001;
+    width: 100%;
+    height: 10%;
+}
