--- a/views/schedule_list_detail.ejs
+++ b/views/schedule_list_detail.ejs
@@ -205,6 +205,9 @@
 
 					</div>
 				</div>
+				<% if (login) { %>
+				<%- include chat.ejs %>
+				<% } %>
 			</section>
 			<!-- / -->
 
@@ -235,6 +238,7 @@
         <script type="text/javascript">var plugin_path = '/assets/plugins/';</script>
 		<script type="text/javascript" src="/assets/plugins/jquery/jquery-2.2.3.min.js"></script>
 		<script type="text/javascript" src="/assets/js/scripts.js"></script>
+		<script type="text/javascript" src="/javascripts/chat.js"></script>
 		<script type="text/javascript" src="/javascripts/heart.js"></script>
 	</body>
 </html>
