--- a/views/timeline.ejs
+++ b/views/timeline.ejs
@@ -132,6 +132,9 @@
 					</div>
 
 				</div>
+				<% if (login) { %>
+				<%- include chat.ejs %>
+				<% } %>
 			</section>
 			<!-- / -->
 
@@ -161,7 +164,7 @@
 		<!-- JAVASCRIPT FILES -->
 		<script type="text/javascript">var plugin_path = '/assets/plugins/';</script>-->
 		<script type="text/javascript" src="/assets/plugins/jquery/jquery-2.2.3.min.js"></script>
-
+		<script type="text/javascript" src="/javascripts/chat.js"></script>
 		<script type="text/javascript" src="/assets/js/scripts.js"></script>
 		<script>
 			$(document).ready(function (){
