--- a/views/travel_plan.ejs
+++ b/views/travel_plan.ejs
@@ -242,6 +242,9 @@
 
 
 				</div>
+				<% if (login) { %>
+				<%- include chat.ejs %>
+				<% } %>
 			</section>
 			<!-- / -->
 
@@ -271,7 +274,7 @@
 		<!-- JAVASCRIPT FILES -->
 		<!--<script type="text/javascript">var plugin_path = '/assets/plugins/';</script>-->
 		<script type="text/javascript" src="/assets/plugins/jquery/jquery-2.2.3.min.js"></script>
-
+		<script type="text/javascript" src="/javascripts/chat.js"></script>
 		<script type="text/javascript" src="/assets/js/scripts.js"></script>
 		
 		<!-- STYLESWITCHER - REMOVE -->
