--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -2,7 +2,7 @@
     <div id="content" class="content-switcher">
     <h4>지역 채팅</h4>
         <div id="hideSwitcher">&times;</div>
-        <div id="chatList">
+        <div id="chatList" class="chatList">
             <button id="gyeonggi" class="btn btn-featured btn-red">
                 <span>경기</span>
                 <i class="et-megaphone"></i>
